<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context="com.swan116.calc.CalCActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|end"
        android:hint="@string/hint_string"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/display_size" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#000000" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/clear_string"
                android:textSize="@dimen/font_size2"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/delete_string"
                android:textSize="@dimen/font_size2"
                android:background="@drawable/button_states" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/one_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/one_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/two_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/two_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/three_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/three_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/plus_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/four_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/four_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/five_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/five_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/six_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/six_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/minus_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/seven_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/seven_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/eight_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/eight_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/nine_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/nine_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/multiply_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/multiply_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/dot_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/dot_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/zero_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/zero_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/equals_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/equals_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

            <Button
                android:id="@+id/divide_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/divide_string"
                android:textSize="@dimen/font_size"
                android:background="@drawable/button_states" />

        </TableRow>
    </TableLayout>

</LinearLayout>